# Six-Rush

./: .gitattributes  CMakeLists.txt  Cargo.toml  Main.qml  README.md  main.cpp
.cargo/: config.toml
doc/: rules.md  specification.md  states.md  tasks.md
locales/: en.yml  zh-CN.yml
src/: lib.rs  main.rs
src/assets/images/: README.md
src/assets/sounds/: README.md
src/game/: ai.rs  audio.rs  board.rs  mod.rs  piece.rs  rules.rs  save.rs  state.rs
src/ui/: app.rs  board_view.rs  dialogs.rs  mod.rs
src/utils/: mod.rs
