[package]
name = "six-rush"
version = "0.1.0"
edition = "2024"
authors = ["HaiBo-Yin <nosound@163.com>"]
description = "六子冲 - 人机对弈棋类游戏"
license = "MIT"

[dependencies]
# GUI框架
egui = "0.29"
eframe = { version = "0.29", features = ["default"] }

# 音频
rodio = "0.20"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 工具
anyhow = "1.0"
rand = "0.8"

# 国际化
rust-i18n = "1.0"

# 字体加载（用于加载系统字体）
fontdb = "0.21"

# 文件对话框
rfd = "0.15"

[profile.release]
opt-level = 3
lto = true
